kubernetes/k3s-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    app: nginx
  typer: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
