kubernetes/k3s-nginx/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: k3s.oburgos.com
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx
          servicePort: web
